# learn_with_tello

./: .gitignore  CMakeLists.txt  README.md
app_basic/: CMakeLists.txt
app_basic/src/: CMakeLists.txt  main.cpp  main_controller.cpp  main_controller.hpp  main_view.cpp  main_view.hpp  module_dependency_matrix.cpp  module_dependency_matrix.hpp  settings_dialog_controller.cpp  settings_dialog_controller.hpp  settings_dialog_view.cpp  settings_dialog_view.hpp
app_basic/src/loader/: CMakeLists.txt  library_loader.hpp  loader.cpp  loader.hpp  tab_loader.cpp  tab_loader.hpp
app_basic/src/loader/windows/: CMakeLists.txt  windows_library_loader.cpp  windows_library_loader.hpp
app_common/: CMakeLists.txt  config.cmake
app_common/common/: application.cpp  application.hpp  base_controller.hpp  base_settings.cpp  base_settings.hpp  macro_definition.hpp  settings_controller.hpp
app_common/include/common/: H264Decoder.hpp  application.hpp  frame_grabber.hpp  keyboard_settings.hpp  settings.hpp  settings_controller.hpp  worker.hpp
app_common/src/common/: CMakeLists.txt  H264Decoder.cpp  base_settings.cpp  frame_grabber.cpp  keyboard_settings.cpp  worker.cpp
app_common_video/: CMakeLists.txt
app_common_video/include/video/: frame_grabber.hpp  opencv_widget.hpp
app_common_video/scripts/: shader.fs  shader.vs
app_common_video/src/video/: CMakeLists.txt  H264Decoder.cpp  frame_grabber.cpp  frame_grabber_internal.cpp  frame_grabber_internal.hpp  image.h  opencv_widget.cpp  texture.h  vertexarray.cpp
app_modules/: CMakeLists.txt
app_modules/00_base_module/: CMakeLists.txt
app_modules/00_base_module/src/: CMakeLists.txt  application.cpp  application.hpp  settings_controller.cpp  settings_controller.hpp  settings_view.cpp  settings_view.hpp
app_modules/01_keyboard_module/: CMakeLists.txt
app_modules/01_keyboard_module/src/: CMakeLists.txt  application.cpp  application.hpp  keyboard_controller.cpp  keyboard_controller.hpp  keyboard_view.cpp  keyboard_view.hpp
app_modules/01_keyboard_module_solution/: CMakeLists.txt
app_modules/01_keyboard_module_solution/src/: CMakeLists.txt  application.cpp  application.hpp  command_thread.cpp  command_thread.hpp  command_worker.cpp  command_worker.hpp  image.h  keyboard_controller.cpp  keyboard_controller.hpp  keyboard_view.cpp  keyboard_view.hpp  shader.fs  shader.h  takeoff_worker.cpp  takeoff_worker.hpp  tello_video_widget.hpp  texture.h  types.hpp  vertexbuffer.cpp  vertexbuffer.h  video_worker.cpp  video_worker.hpp
app_modules/01_keyboard_module_solution/src/functions/: CMakeLists.txt  linear_function.cpp  linear_function.hpp
app_modules/01_keyboard_module_solution/src/settings/: CMakeLists.txt  keyboard_settings.cpp  keyboard_settings.hpp  settings_controller.cpp  settings_controller.hpp  settings_view.cpp  settings_view.hpp
app_modules/02_lukas_module/: CMakeLists.txt
app_modules/02_lukas_module/src/: application.cpp  keyboard_controller.cpp  keyboard_controller.hpp  keyboard_view.cpp  keyboard_view.hpp
app_modules/02_video_module/: CMakeLists.txt
app_modules/02_video_module/src/: CMakeLists.txt  application.cpp  application.hpp  keyboard_controller.cpp  keyboard_controller.hpp  keyboard_view.cpp  keyboard_view.hpp  module_load.cpp  module_load.hpp  video_controller.cpp  video_controller.hpp  video_view.cpp  video_view.hpp
app_modules/99_template/: CMakeLists.txt
app_modules/99_template/src/: CMakeLists.txt  application.cpp  application.hpp  controller.cpp  controller.hpp  settings_controller.cpp  settings_controller.hpp  settings_view.cpp  settings_view.hpp  template_settings.cpp  template_settings.hpp  view.cpp  view.hpp
cmake/: FindFLTK.cmake  copy_libraries.cmake  copy_modules.cmake  functions.cmake
doc/: compile.sh  docker-compose.yml
doc/tex/: command_definition.tex  learn_with_tello.tex
doc/tex/chapter_02/: chapter_02.tex
doc/tex/chapter_02/solutions/: solution_01.tex
doc_source/: Dockerfile  compile.sh  docker-compose.yml
doc_source/tex/common/: command_definition.tex
doc_source/tex/common/chapter_01/resources/: 02_architecture.drawio
doc_source/tex/de/: learn_with_tello.tex  title_page.tex
doc_source/tex/de/chapter_01/: architectur.tex  chapter_01.tex  clion_config.tex  ms_visual_studio_config.tex
doc_source/tex/de/chapter_02/: chapter_02.tex  cpu.tex  cpu_uebung01.tex  cpu_uebung02.tex  cpu_uebung03.tex
doc_source/tex/de/chapter_02/exercises/: exercise_01.tex
doc_source/tex/de/resources/: glossary.tex  literature.bib
doc_source/tex/en/: learn_with_tello.tex  title_page.tex
doc_source/tex/en/chapter_01/: chapter_01.tex
doc_source/tex/en/resources/: glossary.tex
libs/: CMakeLists.txt  ffmpeg.cmake  fltk.cmake  glad.cmake  h264_decoder.cmake  opencv.cmake  tello.cmake
libs/ffmpeg/: ffmpeg.cmake
libs/stb/: CMakeLists.txt
